--- a/TA_YOLOv10.ipynb
+++ b/TA_YOLOv10.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQ3NovTFNbyGPaoNdQJBg4",
+      "authorship_tag": "ABX9TyNRGjwTL+/wCf5WjcPo5b2f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,16 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/ditorizkyka/Final-Project/blob/main/TA_YOLOv10.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Pothole Detection using YOLOv10\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "AOpN4u-O_GRT"
+      }
     },
     {
       "cell_type": "code",
